<resources>
    <string name="app_name">Test</string>
    <string name="book_title">Book title</string>
    <string name="writer">writer</string>
    <string name="price_sample">2000</string>
    <string name="price">Book price</string>
    <string name="submit_book_form_desc">Submit book form</string>
    <string name="book_list">Book list</string>
    <string name="wishlist">Wishlist</string>
    <string name="wishlist_count">Wishlist by %1$d people</string>
    <string name="channel_name">book notification</string>
    <string name="channel_desc">Book wishlist notification</string>
</resources>